[gd_scene load_steps=19 format=2]

[ext_resource path="res://rounded-mplus-1m-medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/LoadMenu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SaveMenu.gd" type="Script" id=4]
[ext_resource path="res://Scripts/SystemMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=7]
extra_spacing_top = -5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
extra_spacing_top = -5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
extra_spacing_top = -4
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
extra_spacing_top = -5
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 512.0
margin_bottom = 456.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Control" parent="GUI"]
margin_right = 512.0
margin_bottom = 24.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="UIColor" type="Control" parent="GUI/Menu"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="ColorRect" parent="GUI/Menu/UIColor"]
margin_right = 512.0
margin_bottom = 456.0
mouse_filter = 2
color = Color( 0.168627, 0.176471, 0.25098, 1 )

[node name="MenubarBGColor" type="ColorRect" parent="GUI/Menu/UIColor"]
margin_right = 512.0
margin_bottom = 24.0
mouse_filter = 2
color = Color( 0.137255, 0.141176, 0.156863, 1 )

[node name="MenubarCopyBGColor" type="ColorRect" parent="GUI/Menu/UIColor"]
margin_left = 448.0
margin_right = 512.0
margin_bottom = 24.0
mouse_filter = 2
color = Color( 0.247059, 0.247059, 0.286275, 1 )

[node name="LoadMenu" type="MenuButton" parent="GUI/Menu"]
margin_right = 44.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
text = "Load"
script = ExtResource( 2 )

[node name="SaveMenu" type="MenuButton" parent="GUI/Menu"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 30.0
focus_mode = 2
custom_fonts/font = SubResource( 7 )
text = "Save"
script = ExtResource( 4 )

[node name="SystemMenu" type="MenuButton" parent="GUI/Menu"]
margin_left = 96.0
margin_right = 156.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 13 )
text = "System"
script = ExtResource( 5 )

[node name="CopyButton" type="Button" parent="GUI/Menu"]
margin_left = 448.0
margin_right = 512.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "Copy"

[node name="TextArea" type="Control" parent="GUI"]
margin_top = 24.0
margin_right = 512.0
margin_bottom = 456.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HeaderLabel" type="Label" parent="GUI/TextArea"]
margin_right = 320.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "定型文"

[node name="HeaderTextEdit" type="TextEdit" parent="GUI/TextArea"]
margin_top = 24.0
margin_right = 512.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 2 )

[node name="TitleLineEdit" type="LineEdit" parent="GUI/TextArea"]
margin_top = 136.0
margin_right = 512.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 4 )

[node name="TitleLabel" type="Label" parent="GUI/TextArea/TitleLineEdit"]
margin_top = -24.0
margin_right = 320.0
custom_fonts/font = SubResource( 3 )
text = "動画タイトル"

[node name="UrlLineEdit" type="LineEdit" parent="GUI/TextArea"]
margin_top = 192.0
margin_right = 512.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 4 )

[node name="UrlLabel" type="Label" parent="GUI/TextArea/UrlLineEdit"]
margin_top = -24.0
margin_right = 320.0
custom_fonts/font = SubResource( 3 )
text = "動画URL"

[node name="HashtagLineEdit" type="LineEdit" parent="GUI/TextArea"]
margin_top = 248.0
margin_right = 512.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 5 )

[node name="HashtagLabel" type="Label" parent="GUI/TextArea/HashtagLineEdit"]
margin_top = -24.0
margin_right = 320.0
custom_fonts/font = SubResource( 3 )
text = "ハッシュタグ"

[node name="HashtagOptionButton" type="OptionButton" parent="GUI/TextArea/HashtagLineEdit"]
margin_top = 40.0
margin_right = 256.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 6 )

[node name="FooterLabel" type="Label" parent="GUI/TextArea"]
margin_top = 320.0
margin_right = 320.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 1 )
text = "定型文"

[node name="FooterTextEdit" type="TextEdit" parent="GUI/TextArea"]
margin_top = 344.0
margin_right = 512.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )

[node name="LogMassageLabel" type="Label" parent="GUI/TextArea"]
margin_left = 202.0
margin_top = -24.0
margin_right = 242.0
custom_fonts/font = SubResource( 12 )

[node name="LogTimer" type="Timer" parent="GUI/TextArea/LogMassageLabel"]
wait_time = 0.5
autostart = true

[node name="CopyArea" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BG" type="ColorRect" parent="GUI/CopyArea"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.235294, 0.247059, 1 )

[node name="TextEdit" type="TextEdit" parent="GUI/CopyArea"]
margin_left = 8.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 10 )

[node name="CloseButton" type="Button" parent="GUI/CopyArea"]
margin_left = 432.0
margin_top = 420.0
margin_right = 504.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 9 )
text = "Close"

[node name="Debug" type="Control" parent="."]
visible = false
margin_right = 512.0
margin_bottom = 456.0
mouse_filter = 2

[node name="DebugLabel" type="Label" parent="Debug"]
margin_left = 224.0
margin_right = 264.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 11 )
text = "debug"

[node name="DebugTimer" type="Timer" parent="Debug"]
process_mode = 0
autostart = true

[connection signal="pressed" from="GUI/Menu/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="timeout" from="GUI/TextArea/LogMassageLabel/LogTimer" to="." method="_on_LogTimer_timeout"]
[connection signal="pressed" from="GUI/CopyArea/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="Debug/DebugTimer" to="." method="_on_DebugTimer_timeout"]
